Revert "RG-1830 select's button vertical align fixed"
This reverts commit 8766ebb

--- a/components/select/select.css
+++ b/components/select/select.css
@@ -144,7 +144,6 @@
   width: 100%;
 
   text-align: left;
-  vertical-align: baseline;
 }
 
 .buttonValueOpen {
